# vk_scripts

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: workflows.yml
.github/workflow/: tests.yml.
.github/workflows/: check_merge.yml  main.yml  unit_tests  unit_tests.yml
configs/: settings.yaml
enums/: __init__.py  group_type_enum.py
exceptions/: __init__.py  incorrect_link.py  invalid_access_token.py  unknown_method_passed.py
models/: group.py
tests/unit/: test_ vk_exception_screamer.py
tests/unit/aggregators/: test_post_aggregate.py
tests/unit/parsers/: test_sub_marathon_post_parser.py
tests/unit/vk_client/: test_vk_client.py  vk_client_get_notify.py
vk_exceptions_screamer/: __init__.py  vk_exceptions_screamer.py
vk_scripts/: config.py  default_groups_list  run_post_aggregate.py
vk_scripts/aggregators/: __init__.py  post_aggregator.py
vk_scripts/execute_texts/: getGroupsInfo_code  getGroupsPosts_code.txt
vk_scripts/models/: __init__.py  group.py  vk_group.py  vk_post.py
vk_scripts/parsers/: subscription_marathon_post_parser.py
vk_scripts/senders/: __init__.py  abstract_sender.py  json_kafka_sender.py
vk_scripts/vk_client/: __init__.py  vk_client.py
