[tool.poetry]
name = "vk-scripts"
version = "0.1.0"
description = ""
authors = ["nora <eleonora.dutt@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.9"
requests = "^2.28.1"
retry = "^0.9.2"
pydantic = "^1.10.2"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
